@@ -54,6 +54,7 @@ ApplyTransparencyShader::ApplyTransparencyShader()
     glUniform1i(uTransparentTex, 2);
     glUniform1i(uTransparentDepth, 3);
     glUniform1i(uPaletteTex, 4);
+    glUniform1i(uBlendPaletteTex, 5);
 }
 
 ApplyTransparencyShader::~ApplyTransparencyShader()
@@ -69,19 +70,22 @@ void ApplyTransparencyShader::GetLocations()
     uTransparentTex = GetUniformLocation("uTransparentTex");
     uTransparentDepth = GetUniformLocation("uTransparentDepth");
     uPaletteTex = GetUniformLocation("uPaletteTex");
+    uBlendPaletteTex = GetUniformLocation("uBlendPaletteTex");
 
     vPosition = GetAttributeLocation("vPosition");
     vTextureCoordinate = GetAttributeLocation("vTextureCoordinate");
 }
 
 void ApplyTransparencyShader::SetTextures(
-    GLuint opaqueTex, GLuint opaqueDepth, GLuint transparentTex, GLuint transparentDepth, GLuint paletteTex)
+    GLuint opaqueTex, GLuint opaqueDepth, GLuint transparentTex, GLuint transparentDepth, GLuint paletteTex,
+    GLuint blendPaletteTex)
 {
     OpenGLAPI::SetTexture(0, GL_TEXTURE_2D, opaqueTex);
     OpenGLAPI::SetTexture(1, GL_TEXTURE_2D, opaqueDepth);
     OpenGLAPI::SetTexture(2, GL_TEXTURE_2D, transparentTex);
     OpenGLAPI::SetTexture(3, GL_TEXTURE_2D, transparentDepth);
     OpenGLAPI::SetTexture(4, GL_TEXTURE_2D, paletteTex);
+    OpenGLAPI::SetTexture(5, GL_TEXTURE_2D, blendPaletteTex);
 }
 
 void ApplyTransparencyShader::Draw()
