@@ -119,6 +119,8 @@ struct DrawRectCommand
         FLAG_MASK = (1u << 3u),
         FLAG_CROSS_HATCH = (1u << 4u),
         FLAG_TTF_TEXT = (1u << 5u),
+        // bits 8 to 16 used to store hinting threshold.
+        FLAG_TTF_HINTING_THRESHOLD_MASK = 0xff00
     };
 };
 
