@@ -28,7 +28,7 @@ private:
 
 public:
     explicit OpenGLFramebuffer(SDL_Window* window);
-    OpenGLFramebuffer(int32_t width, int32_t height, bool depth = true, bool integer = true);
+    OpenGLFramebuffer(int32_t width, int32_t height, bool depth = true, bool integer = true, bool word = false);
     ~OpenGLFramebuffer();
 
     OpenGLFramebuffer(const OpenGLFramebuffer&) = delete;
