@@ -149,7 +149,7 @@ namespace OpenRCT2
                 DrawPixelInfo* dpi, const ImageId image, int32_t x, int32_t y, const PaletteMap& paletteMap) override;
             void DrawTTFBitmap(
                 DrawPixelInfo* dpi, TextDrawInfo* info, uint32_t image, const void* pixels, int32_t width, int32_t height,
-                int32_t x, int32_t y) override
+                int32_t x, int32_t y, uint8_t hinting_threshold) override
             {
             }
         };
